# vdsct

./: .gitignore  LICENSE  README.md  pyproject.toml  vdsct.py
src/vdsct/: __init__.py
